testing/tests/ui/macro.stderr
error: macro `thrice` expected 1 argument, found 2
 --> InvalidNumberOfArgs.html:5:2
       "- call thrice(2, 3) -%}"
 --> tests/ui/macro.rs:4:21
  |
4 |   #[template(source = "{%- macro thrice(param) -%}
  |  _____________________^
5 | | {{ param }}
6 | | {%- endmacro -%}
7 | |
8 | | {%- call thrice(2, 3) -%}", ext = "html")]
  | |__________________________^

error: missing arguments when calling macro `thrice`: `param` and `param2`
 --> InvalidNumberOfArgs2.html:5:2
       "- call thrice() -%}"
  --> tests/ui/macro.rs:12:21
   |
12 |   #[template(source = "{%- macro thrice(param, param2) -%}
   |  _____________________^
13 | | {{ param }} {{ param2 }}
14 | | {%- endmacro -%}
15 | |
16 | | {%- call thrice() -%}", ext = "html")]
   | |______________________^

error: macro `thrice` expected 0 argument, found 2
 --> InvalidNumberOfArgs3.html:4:2
       "- call thrice(1, 2) -%}"
  --> tests/ui/macro.rs:20:21
   |
20 |   #[template(source = "{%- macro thrice() -%}
   |  _____________________^
21 | | {%- endmacro -%}
22 | |
23 | | {%- call thrice(1, 2) -%}", ext = "html")]
   | |__________________________^

error: expected `)` to close macro argument list
 --> <source attribute>:1:17
       "%}{% endmacro %}"
  --> tests/ui/macro.rs:27:21
   |
27 | #[template(source = "{% macro thrice( %}{% endmacro %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `)` to close macro argument list
 --> <source attribute>:1:24
       "%}{% endmacro %}"
  --> tests/ui/macro.rs:31:21
   |
31 | #[template(source = "{% macro thrice(a, b, c %}{% endmacro %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `)` to close macro argument list
 --> <source attribute>:1:23
       "= %}{% endmacro %}"
  --> tests/ui/macro.rs:35:21
   |
35 | #[template(source = "{% macro thrice(a, b, c= %}{% endmacro %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `)` to close macro argument list
 --> <source attribute>:1:24
       "= %}{% endmacro %}"
  --> tests/ui/macro.rs:39:21
   |
39 | #[template(source = "{% macro thrice(a, b, c = %}{% endmacro %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing argument when calling macro `example`: `name`
 --> WrongNumberOfParams.txt:4:10
       " call example(name=\"name\", value=\"\") %}\n    "
  --> tests/ui/macro.rs:44:14
   |
44 |       source = r#"
   |  ______________^
45 | |         {% macro example(name, value, current, label="", id="") %}
46 | |         {% endmacro %}
47 | |         {% call example(name="name", value="") %}
48 | |     "#,
   | |______^

error: argument `name` is passed more than once when calling macro `example`
 --> DuplicatedArg.txt:4:10
       " call example(0, name=\"name\", value=\"\") %}\n    "
  --> tests/ui/macro.rs:55:14
   |
55 |       source = r#"
   |  ______________^
56 | |         {% macro example(name, value, arg=12) %}
57 | |         {% endmacro %}
58 | |         {% call example(0, name="name", value="") %}
59 | |     "#,
   | |______^
